--- a/index.html
+++ b/index.html
@@ -11,171 +11,22 @@
   </head>
 
   <body>
-    <div class="sidebar">
-      <ul>
-        <li><img src="building1.png" /></li>
-        <li><img src="building2.png" /></li>
-        <li><img src="building3.png" /></li>
-      </ul>
-      <button class="zoom" id="zoomIn">+</button>
-      <button class="zoom" id="zoomOut">-</button>
-    </div>
-
-    <div class="wrapper">
-      <div class="floor">
-        <div class="players">
-          <!-- player 1 -->
-          <div class="player blue" data-name="joe">
-            <div class="right"></div>
-            <div class="front">
-              <div class="top"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Data Cords are for Future use -->
-        <div class="row">
-          <div data-cords="[0,0]" class="tile"></div>
-          <div data-cords="[0,1]" class="tile"></div>
-          <div data-cords="[0,2]" class="tile"></div>
-          <div data-cords="[0,3]" class="tile"></div>
-          <div data-cords="[0,4]" class="tile"></div>
-          <div data-cords="[0,5]" class="tile"></div>
-          <div data-cords="[0,6]" class="tile"></div>
-          <div data-cords="[0,7]" class="tile"></div>
-          <div data-cords="[0,8]" class="tile"></div>
-          <div data-cords="[0,9]" class="tile"></div>
-          <div data-cords="[0,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[1,0]" class="tile"></div>
-          <div data-cords="[1,1]" class="tile"></div>
-          <div data-cords="[1,2]" class="tile"></div>
-          <div data-cords="[1,3]" class="tile"></div>
-          <div data-cords="[1,4]" class="tile"></div>
-          <div data-cords="[1,5]" class="tile"></div>
-          <div data-cords="[1,6]" class="tile"></div>
-          <div data-cords="[1,7]" class="tile"></div>
-          <div data-cords="[1,8]" class="tile"></div>
-          <div data-cords="[1,9]" class="tile"></div>
-          <div data-cords="[1,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[2,0]" class="tile"></div>
-          <div data-cords="[2,1]" class="tile"></div>
-          <div data-cords="[2,2]" class="tile"></div>
-          <div data-cords="[2,3]" class="tile"></div>
-          <div data-cords="[2,4]" class="tile"></div>
-          <div data-cords="[2,5]" class="tile"></div>
-          <div data-cords="[2,6]" class="tile"></div>
-          <div data-cords="[2,7]" class="tile"></div>
-          <div data-cords="[2,8]" class="tile"></div>
-          <div data-cords="[2,9]" class="tile"></div>
-          <div data-cords="[2,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[3,0]" class="tile"></div>
-          <div data-cords="[3,1]" class="tile"></div>
-          <div data-cords="[3,2]" class="tile"></div>
-          <div data-cords="[3,3]" class="tile"></div>
-          <div data-cords="[3,4]" class="tile"></div>
-          <div data-cords="[3,5]" class="tile"></div>
-          <div data-cords="[3,6]" class="tile"></div>
-          <div data-cords="[3,7]" class="tile"></div>
-          <div data-cords="[3,8]" class="tile"></div>
-          <div data-cords="[3,9]" class="tile"></div>
-          <div data-cords="[3,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[4,0]" class="tile"></div>
-          <div data-cords="[4,1]" class="tile"></div>
-          <div data-cords="[4,2]" class="tile"></div>
-          <div data-cords="[4,3]" class="tile"></div>
-          <div data-cords="[4,4]" class="tile"></div>
-          <div data-cords="[4,5]" class="tile"></div>
-          <div data-cords="[4,6]" class="tile"></div>
-          <div data-cords="[4,7]" class="tile"></div>
-          <div data-cords="[4,8]" class="tile"></div>
-          <div data-cords="[4,9]" class="tile"></div>
-          <div data-cords="[4,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[5,0]" class="tile"></div>
-          <div data-cords="[5,1]" class="tile"></div>
-          <div data-cords="[5,2]" class="tile"></div>
-          <div data-cords="[5,3]" class="tile"></div>
-          <div data-cords="[5,4]" class="tile"></div>
-          <div data-cords="[5,5]" class="tile"></div>
-          <div data-cords="[5,6]" class="tile"></div>
-          <div data-cords="[5,7]" class="tile"></div>
-          <div data-cords="[5,8]" class="tile"></div>
-          <div data-cords="[5,9]" class="tile"></div>
-          <div data-cords="[5,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[6,0]" class="tile"></div>
-          <div data-cords="[6,1]" class="tile"></div>
-          <div data-cords="[6,2]" class="tile"></div>
-          <div data-cords="[6,3]" class="tile"></div>
-          <div data-cords="[6,4]" class="tile"></div>
-          <div data-cords="[6,5]" class="tile"></div>
-          <div data-cords="[6,6]" class="tile"></div>
-          <div data-cords="[6,7]" class="tile"></div>
-          <div data-cords="[6,8]" class="tile"></div>
-          <div data-cords="[6,9]" class="tile"></div>
-          <div data-cords="[6,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[7,0]" class="tile"></div>
-          <div data-cords="[7,1]" class="tile"></div>
-          <div data-cords="[7,2]" class="tile"></div>
-          <div data-cords="[7,3]" class="tile"></div>
-          <div data-cords="[7,4]" class="tile"></div>
-          <div data-cords="[7,5]" class="tile"></div>
-          <div data-cords="[7,6]" class="tile"></div>
-          <div data-cords="[7,7]" class="tile"></div>
-          <div data-cords="[7,8]" class="tile"></div>
-          <div data-cords="[7,9]" class="tile"></div>
-          <div data-cords="[7,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[8,0]" class="tile"></div>
-          <div data-cords="[8,1]" class="tile"></div>
-          <div data-cords="[8,2]" class="tile"></div>
-          <div data-cords="[8,3]" class="tile"></div>
-          <div data-cords="[8,4]" class="tile"></div>
-          <div data-cords="[8,5]" class="tile"></div>
-          <div data-cords="[8,6]" class="tile"></div>
-          <div data-cords="[8,7]" class="tile"></div>
-          <div data-cords="[8,8]" class="tile"></div>
-          <div data-cords="[8,9]" class="tile"></div>
-          <div data-cords="[8,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[9,0]" class="tile"></div>
-          <div data-cords="[9,1]" class="tile"></div>
-          <div data-cords="[9,2]" class="tile"></div>
-          <div data-cords="[9,3]" class="tile"></div>
-          <div data-cords="[9,4]" class="tile"></div>
-          <div data-cords="[9,5]" class="tile"></div>
-          <div data-cords="[9,6]" class="tile"></div>
-          <div data-cords="[9,7]" class="tile"></div>
-          <div data-cords="[9,8]" class="tile"></div>
-          <div data-cords="[9,9]" class="tile"></div>
-          <div data-cords="[9,10]" class="tile"></div>
-        </div>
-        <div class="row">
-          <div data-cords="[10,0]" class="tile"></div>
-          <div data-cords="[10,1]" class="tile"></div>
-          <div data-cords="[10,2]" class="tile"></div>
-          <div data-cords="[10,3]" class="tile"></div>
-          <div data-cords="[10,4]" class="tile"></div>
-          <div data-cords="[10,5]" class="tile"></div>
-          <div data-cords="[10,6]" class="tile"></div>
-          <div data-cords="[10,7]" class="tile"></div>
-          <div data-cords="[10,8]" class="tile"></div>
-          <div data-cords="[10,9]" class="tile"></div>
-          <div data-cords="[10,10]" class="tile"></div>
-        </div>
+    <div>
+      <canvas id="canvas" width="800" height="600"></canvas>
+      <div id="sidebar">
+        <!-- <img
+          src="building1.png"
+          alt="building 1"
+          id="building1"
+          class="building"
+        />
+        <img
+          src="building2.png"
+          alt="building 2"
+          id="building2"
+          class="building"
+        /> -->
+        <button id="add-image">Add Image</button>
       </div>
     </div>
 
